# src/dto/PaymentInitialize.ts
@@ -1,0 +1,7 @@
+import { PaymentInitializeVariant } from "../enums/PaymentInilizeVariant";
+
+export interface PaymentInitialize {
+  paymentVariant: PaymentInitializeVariant,
+
+  amountMajor?: number | null
+}
