# src/dto/PaymentInitializeResponse.ts
@@ -1,0 +1,5 @@
+export interface PaymentInitializeResponse {
+  paymentProviderRedirectUrl: string
+  paymentReference: string,
+  accessCode: string
+}
